--- a/index.html
+++ b/index.html
@@ -43,33 +43,31 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 	console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 	
-	function drawRectangle() {
-		var aRectangle = document.getElementById("a");
-		var aContext = aRectangle.getContext("2d");
-		aContext.fillRect(50,25,150,100);
+	function drawRectangle() { // this creates a function that draws a rectangle on the HTML canvas element 
+		var aRectangle = document.getElementById("a"); //this creates a variable that retrieves the canvas element created below that matches the ID "a" from the DOM 
+		var aContext = aRectangle.getContext("2d"); //this creates a variable that uses the getContext() method and sets the 2D context of the canvas element (retrieved through the aRectangle variable) that basically allows for more methods and properties (like fillRect, fillStyle, beginPath etc) to be "drawn" and applied to the canvas element. the "2d" part specifies a x,y cartisian coordinate system 
+		aContext.fillRect(100,100,75,100); // this uses the aContext variable to call the fillRect() method that draws a rectangle at (100,100) of the canvas coordinate system (x=100, y=100), specified by the first 2 numbers of the method. The next two numbers specify the width (which is set to 75 pixels) and the height (which is 100 pixels)  
 	}
 
-	function drawName() {
-		var aName = document.getElementById("a");
-		var aContext = aName.getContext("2d");
-		aContext.font = "bold 24px sans-serif";
-		aContext.fillText("Daniel Fan", 150, 200);
+	function drawName() { // this creates a function that prints my name as text on the HTML canvas element 
+		var aName = document.getElementById("a"); //reference the comment with this code under the drawRectangle function
+		var aContext = aName.getContext("2d"); //reference the comment with this code under the drawRectangle function
+		aContext.font = "bold 24px sans-serif"; //this sets the font style to 24 pixels, bolden, san-serif letters. This uses CSS code as its guidelines to setting text styles
+		aContext.fillText("Daniel Fan", 150, 200); //this uses the aContext variable to call the fillText() method to display the intended string ("Daniel Fan") at x=150 and y=200 of the canvas coordinate system. The text displayed will be in the style of the elements defined above 
 	}
 	
-	function getPicture() {
-		var aPicture = document.getElementById("a");
-		var aContext = aPicture.getContext("2d");
-		/* var actualImage = document.getElementById("image");
-		aContext.drawImage(actualImage, 0, 0); */
-		var newImage = new Image();
-		newImage.src = "https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg"
-		aContext.drawImage(newImage, 20, 20, 192, 108);
+	function getPicture() { // this creates a function that displays a picture on the HTML canvas element specified by a URL 
+		var aPicture = document.getElementById("a"); //reference the comment with this code under the drawRectangle function
+		var aContext = aPicture.getContext("2d"); //reference the comment with this code under the drawRectangle function
+		var newImage = new Image(); // this creates a new varaible that defines an JS image element under newImage
+		newImage.src = "https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" // this sets the source of the image variable to be retrived from the specified URL jpg 
+		aContext.drawImage(newImage, 20, 20, 192, 108); // this uses the aContext variable to call the drawImage() method that displays the image specified by the newImage variable at x=20 and y=20. The next two numbers serve to scale the image and define the width(192 pixels) and the height (108 pixels)
 	}
 
-	function clearCanvas () {
-		var aPicture = document.getElementById("a");
-		var aContext = aPicture.getContext("2d");
-		aContext.clearRect(0, 0, aPicture.width, aPicture.height);
+	function clearCanvas () { //this creates a function that clears all the canvas properties laid on by previous functions 
+		var aPicture = document.getElementById("a"); //reference the comment with this code under the drawRectangle function
+		var aContext = aPicture.getContext("2d"); //reference the comment with this code under the drawRectangle function
+		aContext.clearRect(0, 0, aPicture.width, aPicture.height); // this uses the clearRect() method to effectively create a rectangle to which the pixels inside are cleared within. the first 2 numbers specify where the "rectangle" starts drawing to clear and the last 2 properties use the .length property to get the pixel dimensions of the canvas element to effectively clear the whole canvas. alternatively I can also just specific the width and length used when creating the canvas element 
 	}
 
 </script>
@@ -102,18 +100,16 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 	
 <div id="content" class="w3-container">
-	<canvas id = "a" width = "400" height = "400" class="clear" style= "border:1px dotted;float:left"></canvas> <!- This creates a bordered canvas ->
+	<canvas id = "a" width = "400" height = "400" class="clear" style= "border:1px dotted;float:left"></canvas> <!-- above, I created a canvas element. within the element, I included an ID attribute to which allows this specific canvas element to be accessed from the DOM in various portions of the code (which will be very needed in the JS part of this code). I also specified its width and height to be both 400. The string of attributes after style specifies a dotted border that surrounds the perimeter of the border so that the canvas is not just blank in the final version of the code-->
 
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 
-		<a onclick = "drawRectangle();" class="w3-btn w3-grey w3-round">Draw Rectangle</a> 
-		<a onclick = "drawName();" class="w3-btn w3-grey w3-round">Draw Name</a> 
-		<a onclick = "getPicture();" class="w3-btn w3-grey w3-round">Picture</a> 
-		<a onclick = "clearCanvas();" class="w3-btn w3-grey w3-round">Clear</a>
-
-	<!- <img id="image" src="https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" alt="image" ->
+		<a onclick = "drawRectangle();" class="w3-btn w3-grey w3-round">Draw Rectangle</a> <!- this creates a button (saying "Draw Rectangle") that, when pressed executes the drawRectangle() function on the JS portion of the code, which creates a rectangle on the canvas -> 
+		<a onclick = "drawName();" class="w3-btn w3-grey w3-round">Draw Name</a> <!- this creates a button (saying "Draw Name") that, when pressed executes the drawName() function on the JS portion of the code, which prints my name in text on the canvas   ->
+		<a onclick = "getPicture();" class="w3-btn w3-grey w3-round">Picture</a> <!- this creates a button (saying "Picture") that, when pressed executes the getPicture() function on the JS portion of the code, which prints a picture on the canvas ->
+		<a onclick = "clearCanvas();" class="w3-btn w3-grey w3-round">Clear</a> <!- this creates a button (saying "Clear") that, when pressed executes the clearCanvas() function on the JS portion of the code, which clears the canvas ->
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
