--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <div id="header" class="w3-container w3-flat-carrot">
 	<h1>App6---HTML5-Canvas</h1>
 </div>
-
 <div id="content" class="w3-container">
-	<canvas id = "a" width = "400" height = "400" class="clear" style= "border:1px solid;float:left"></canvas> <!-- I created a canvas element. within the element, I included an ID attribute to which allows this specific canvas element to be accessed from the DOM in various portions of the code (which will be very needed in the JS part of this code). I also specified its width and height to be both 400. The string of attributes after style specifies a solid border that surrounds the perimeter of the border so that the canvas is not just blank in the final version of the code-->
 
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 </div>
 
+<div>
+	<canvas id = "a" width = "400" height = "400" class="clear" style= "border:1px solid;float:center"></canvas> <!-- I created a canvas element. within the element, I included an ID attribute to which allows this specific canvas element to be accessed from the DOM in various portions of the code (which will be very needed in the JS part of this code). I also specified its width and height to be both 400. The string of attributes after style specifies a solid border that surrounds the perimeter of the border so that the canvas is not just blank in the final version of the code-->
+</div>
 
 <div>
 		<a onclick = "drawRectangle();" class="w3-btn w3-grey w3-round">Draw Rectangle</a> <!- this creates a button (saying "Draw Rectangle") that, when pressed executes the drawRectangle() function on the JS portion of the code, which creates a rectangle on the canvas -> 
