--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         Press orange button to create or choose image file:
         <input type="file" id="fileInput" STYLE="background-color: #FF6600;"> <!-- this initates an input element that allows the user to upload a file (allowed and specified by type= "file") which would become an image with the ID of fileInput to where the JS portion of the code can store the inputed image -->
       </div>
-      <div id="messageDisplayArea"></div> // this defined a division to which can display the text for whether the user-uploaded file is supported or not 
+      <div id="messageDisplayArea"></div> <!-- this defined a division to which can display the text for whether the user-uploaded file is supported or not --> 
 
       <canvas id="myCanvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas> <!-- this defines the canvas HTML element to which the original uploaded image will be displayed -->
       <script> /* This script initiates the canvas and puts the text on the canvas "myCanvas" */
